# vocdoni-passport

./: .dockerignore  .eslintrc.js  .gitignore  App.tsx  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  app.json  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: android-build.yml  ci.yml  ios-build.yml  release.yml
__tests__/: App.test.tsx  proofCommitmentAssertions.test.ts  requestLinks.test.ts  witnessPayload.test.ts
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  barretenberg_jni.cpp  env_stubs.c  lmdb_stubs.c
docker/: apk.Dockerfile
docker/barretenberg-android-overlay/: CMakeLists.txt
docker/barretenberg-android-overlay/cmake/: msgpack.cmake
docs/: releasing.md
ios/: Podfile
ios/VocdoniPassport/: AcvmWitness.h  AcvmWitness.mm  AppDelegate.mm  Info.plist  LaunchScreen.storyboard  VocdoniPassport.entitlements  acvm_witness_ffi.h
ios/VocdoniPassport.xcodeproj/: project.pbxproj
ios/VocdoniPassportTests/: VocdoniPassportTests.m
scripts/: build-acvm-jni-android.sh  generate-android-launcher-icons.py  generate-android-upload-keystore.sh  write-build-info.js
src/components/: IDCard.tsx  MnemonicDisplay.tsx  SlideToVerify.tsx
src/components/common/: AppHeader.tsx  Button.tsx  Card.tsx  FlowStepIndicator.tsx  PulseBar.tsx  Spinner.tsx  index.ts  styles.ts
src/contexts/: WalletContext.tsx
src/hooks/: useAuth.ts  useIDs.ts
src/native/: AcvmWitness.ts  Barretenberg.ts
src/navigation/: SigningNavigator.tsx  TabNavigator.tsx  WalletSetupNavigator.tsx  rootNavigation.ts  types.ts
src/screens/: AboutScreen.tsx  AuthLockScreen.tsx  BootScreen.tsx
src/screens/history/: HistoryScreen.tsx
src/screens/ids/: IDDetailsScreen.tsx  IDsScreen.tsx
src/screens/scanner/: ScannerScreen.tsx
src/screens/signing/: DisclosureScreen.tsx  SuccessScreen.tsx  (+4 more)
src/services/: ProofGenerator.ts  RegistryCache.ts  RequirementsValidator.ts  ServerClient.ts  WalletService.ts  proofCommitmentAssertions.ts
src/storage/: baseProofStore.ts  historyStorage.ts  idStorage.ts
src/utils/: CRSManager.ts  SODParser.ts  WitnessEncoder.ts  circuitMerkle.ts  requestLinks.ts  witnessBytecode.ts
(+36 files in other folders)
